#142 fix ca-btn on mobile

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -541,8 +541,12 @@ i.caveat {
         min-width: 75px;
         max-width: 200px;
         margin: 5px 0;
+        border: 6px solid white;
+        font-size: 1.2rem;
+        font-family: 'Montserrat', sans-serif;
+        color: #ffffff;
+        font-weight: bold;
     }
-
 }
 
 /* ========== NAVIGATION ========== */
